--- a/templates/base.html
+++ b/templates/base.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <title>DOCA</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
-<nav class="navbar">
-    <h2>🚀 DOCA</h2>
-    <div>
-        <a href="/upload/">Upload</a>
-        <a href="/pc/">Painel</a>
-        <a href="/dashboard/">Dashboard</a>
+<div class="top-bar">
+    <div class="logo-container">
+        <img src="{{ url_for('static', filename='img/logo_dock_white.png') }}" 
+             class="logo-img">
+        <h2>DOCK VIEW GIG2</h2>
     </div>
-</nav>
+
+    <div class="menu">
+        <a href="/upload">Upload</a>
+        <a href="/pc">Painel</a>
+        <a href="/dashboard">Dashboard</a>
+    </div>
+</div>
+
 
 <div class="container">
     {% block content %}{% endblock %}
