upload do tipo de cargas

--- a/templates/pc.html
+++ b/templates/pc.html
@@ -65,6 +65,7 @@
                     <th>Priority</th>
                     <th>Tempo</th>
                     <th>Ação</th>
+                    <th>Tipo</th>
                 </tr>
             </thead>
 
