fix upload e painel

--- a/templates/pc.html
+++ b/templates/pc.html
@@ -28,6 +28,7 @@
                 <option value="checkin">Checkin</option>
                 <option value="closed">Concluídas</option>
                 <option value="no_show">No Show</option>
+                <option value="arrival_scheduled">Arrival Scheduled</option>
             </select>
         </div>
 
